--- a/Web-Application/templates/dashboard/Book.html
+++ b/Web-Application/templates/dashboard/Book.html
@@ -34,6 +34,7 @@
 	<link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
 	
 	<!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -52,6 +53,40 @@
 	<link rel="stylesheet" href="material.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<style>
+		div.stars {
+		  width: 270px;
+		  display: inline-block;
+		}
+
+		input.star { display: none; }
+
+		label.star {
+		  float: right;
+		  padding: 10px;
+		  font-size: 36px;
+		  color: #444;
+		  transition: all .2s;
+		}
+
+		input.star:checked ~ label.star:before {
+		  content: '\f005';
+		  color: #FD4;
+		  transition: all .25s;
+		}
+
+		input.star-5:checked ~ label.star:before {
+		  color: #FE7;
+		  text-shadow: 0 0 20px #952;
+		}
+
+		input.star-1:checked ~ label.star:before { color: #F62; }
+
+		label.star:hover { transform: rotate(-15deg) scale(1.3); }
+
+		label.star:before {
+		  content: '\f006';
+		  font-family: FontAwesome;
+		}
 		#view-source {
 			position: fixed;
 			display: block;
@@ -152,6 +187,10 @@
 
 			// Loading the image of the book
 
+			// -----------------------------------------------------------------------------------
+			// Get the book ID
+			// -----------------------------------------------------------------------------------
+
 			var bookID = String(4);
 			var bookServletCall = "http://10.130.10.35:8080/DBProject/UploadBookPhoto?id="+bookID;
 			// var x = sessionStorage.getItem('id');
@@ -193,6 +232,40 @@
 
 			});
 			
+			// Update the Rating on the click of stars
+			$("input[name='star']").change(function()
+				{
+					alert("Rating Changed");
+					var rating=0;
+
+					// Get Rating from the stars
+					if(document.getElementById("star-1").checked)
+						rating=1;
+					if(document.getElementById("star-2").checked)
+						rating=2;
+					if(document.getElementById("star-3").checked)
+						rating=3;
+					if(document.getElementById("star-4").checked)
+						rating=4;
+					if(document.getElementById("star-5").checked)
+						rating=5;
+					console.log(rating);
+					// alert(rating);
+
+					$.post("http://10.130.10.35:8080/DBProject/UpdateBookRating", {id : sessionStorage.getItem('id'), bookID : bookID, rating : rating},
+						function(data,status)
+						{
+							// Do Nothing
+							if(data[status] == true)
+							{
+								alert("Rating Updated Successfully");
+							}
+						}
+					)
+				}
+			);
+
+
 			$("#logout").click(function(){
 
 				$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
@@ -209,7 +282,7 @@
 			});
 
 			// Retrieve details
-
+			// Get the Book Details
 			$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : bookID , type : "book"},function(data,status) {
 
 				console.log('Entered GetDetails');
@@ -228,6 +301,9 @@
 					document.getElementById("cover-name").innerHTML = Name;
 					document.getElementById("cover-intro").innerHTML = Description;
 					
+					// Set the Rating Here
+
+
 				}
 				else 
 				{
@@ -441,30 +517,33 @@
 										<div class="demo-separator mdl-cell--1-col"></div>
 
 										<!-- SECOND CARD -->
-										<div class="demo-options mdl-card mdl-color--deep-purple-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
+										<div class="demo-options mdl-card mdl-color--blue-grey-300 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
 
-											<div class="follower-list_heading">
-												<i class="friend-icon glyphicon glyphicon-hand-left"></i>
-												<h2 id="follower-list_head">Followees:</h2>
+											<div class="follower-list-heading">
+												<i class="friend-icon glyphicon glyphicon-hand-right"></i>
+												<h2 id="follower-list_head">Your Rating:</h2>
 											</div>
 
 											<div class="follower-list">
-												<ul class="follower-list_outer">
-													<li>
-														<p class="follower-list_name">Navneet Agarwal</p>
-													</li>
-													<li>
-														<p class="follower-list_name">Ritwick Chaudhry</p>
-													</li>
-													<li>
-														<p class="follower-list_name">Saurabh Garg</p>
-													</li>
-												</ul>
+												<div class="stars">
+												  <form action="">
+												    <input class="star star-5" id="star-5" type="radio" name="star"/>
+												    <label class="star star-5" for="star-5"></label>
+												    <input class="star star-4" id="star-4" type="radio" name="star"/>
+												    <label class="star star-4" for="star-4"></label>
+												    <input class="star star-3" id="star-3" type="radio" name="star"/>
+												    <label class="star star-3" for="star-3"></label>
+												    <input class="star star-2" id="star-2" type="radio" name="star"/>
+												    <label class="star star-2" for="star-2"></label>
+												    <input class="star star-1" id="star-1" type="radio" name="star"/>
+												    <label class="star star-1" for="star-1"></label>
+												  </form>
+												</div>
 											</div>
 
-											<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
+											<!-- <div class="mdl-card__actions mdl-card--border" id="follower_read-more">
 												<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
-											</div>
+											</div> -->
 											<!-- <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
 												<h3>View options</h3>
 												<ul>
