--- a/Web-Application/templates/dashboard/Home.html
+++ b/Web-Application/templates/dashboard/Home.html
@@ -107,14 +107,17 @@
 		function openFriendPage(obj)
 		{
 			console.log(obj.innerHTML);
-
 			if (obj.innerHTML == sessionStorage.getItem('id')) {
 				window.location.href = "home.html";
 			}
-
 			sessionStorage.setItem('friend_id',obj.innerHTML);
-			// console.log(sessionStorage.getItem('friend_id'));
+			window.location.href = "friend.html";
+		}
 
+		// Called when follower/followee name is clicked
+		function openFriendPageById(obj)
+		{
+			sessionStorage.setItem('friend_id',obj);
 			window.location.href = "friend.html";
 		}
 
@@ -140,7 +143,8 @@
 				// console.log("sfnasdknaskl");
 				if(event.keyCode == 13) {
 					event.preventDefault();
-					alert(ele.value);        
+					// alert(ele.value);
+					console.log(ele.value);        
 				}
 			}
 			$(document).ready(function(){  
@@ -165,75 +169,91 @@
 		image.src= x2;
 		image_profile_pic.src=x2;
 		image.onload = function(){
-		 document.getElementById("image_id").src=image.src;
-	 }
-	 image.onerror = function()
-	 {
-		document.getElementById("image_id").src="images/user.jpg";
-	}
-	image_profile_pic.onload = function(){
-		document.getElementById("profile_pic").src=image_profile_pic.src;
-	}
-	image_profile_pic.onerror = function()
-	{
-		document.getElementById("profile_pic").src="images/user.jpg";
-	}
+			document.getElementById("image_id").src=image.src;
+		}
+		image.onerror = function()
+		{
+			document.getElementById("image_id").src="images/user.jpg";
+		}
+		image_profile_pic.onload = function(){
+			document.getElementById("profile_pic").src=image_profile_pic.src;
+		}
+		image_profile_pic.onerror = function()
+		{
+			document.getElementById("profile_pic").src="images/user.jpg";
+		}
 
-	$.get("http://10.130.10.35:8080/DBProject/GetAllSearch", {id : sessionStorage.getItem('id')},function(data,status) {
+		$.get("http://10.130.10.35:8080/DBProject/GetAllSearch", {id : sessionStorage.getItem('id')},function(data,status) {
 
-		console.log('Entered GetAllCourse');
-		var src = new Array();
+			console.log('Entered GetAllCourse');
+			var src = new Array();
 
-		$.each(data,function(index,element){
+			$.each(data,function(index,element){
 
-			var temp = element["type"] + " : ";
-			temp += element["id"] + ",";
-			temp += element["name"];
-			
-			var temp3 = element["type"] + " : ";
-			temp3 += element["name"];
-			
+				var temp = element["type"] + ",";
+				temp += element["id"] + ",";
+				temp += element["name"];
 
-			var obj = {label:temp3,value: temp};
-			src.push(obj);
+				var temp3 = element["type"] + " : ";
+				temp3 += element["name"];
+
+
+				var obj = {label:temp3,value: temp};
+				src.push(obj);
 			// src.push(temp);
 
 		});
-		console.log(src);
-		$("#search").autocomplete({
-			source: src
+			console.log(src);
+			$("#search").autocomplete({
+				source: src,
+				select: function (e, ui) {
+					// alert(e);
+					// console.log(ui["item"]["value"]);
+					var selectedItem = ui["item"]["value"];
+					var items = selectedItem.split(",");
+					// console.log(items[0]);
+					if(items[0]=="reader"){
+						openFriendPageById(items[1]);
+					}
+					else if(items[0]=="book"){
+						openBookPage(items[1]);
+					}
+					else{
+
+					}
+				}
+			});
+
 		});
 
-	});
-	
-	$("#logout").click(function(){
+		$("#logout").click(function(){
 
-		$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
-			console.log(data["status"]);
-			if (data["status"] == true) {
-				window.location.href = "../LoginRegistrationForm/index.html";
-			}
-			else{
-				alert("Cannot logout");
-				window.location.href = "index.html";
-			}
+			$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
+				console.log(data["status"]);
+				if (data["status"] == true) {
+					window.location.href = "../LoginRegistrationForm/index.html";
+				}
+				else{
+					alert("Cannot logout");
+					window.location.href = "index.html";
+				}
+			});
+
 		});
+		$("#navlogout").click(function(){
 
-	});
-	$("#navlogout").click(function(){
+			$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
+				console.log(data["status"]);
+				if (data["status"] == true) {
+					window.location.href = "../LoginRegistrationForm/index.html";
+				}
+				else{
+					alert("Cannot logout");
+					window.location.href = "index.html";
+				}
+			});
 
-		$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
-			console.log(data["status"]);
-			if (data["status"] == true) {
-				window.location.href = "../LoginRegistrationForm/index.html";
-			}
-			else{
-				alert("Cannot logout");
-				window.location.href = "index.html";
-			}
 		});
-
-	});
 		// $('#image_id').click(function(){
 		//     $('input[type=file]').click();
 		// });
@@ -337,7 +357,7 @@
 
 					});
 
-				}
+}
 
 				// Update remaining info in page
 				document.getElementById("cover-name").innerHTML = name;
@@ -349,7 +369,7 @@
 			}
 
 		});
-	}
+}
 });
 </script>
 </head>
@@ -568,95 +588,95 @@
 
 		</main>
 	</div>
-					
 
 
 
 
 
 
-					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
+
+	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
+		<defs>
+			<mask id="piemask" maskContentUnits="objectBoundingBox">
+				<circle cx=0.5 cy=0.5 r=0.49 fill="white">
+					<circle cx=0.5 cy=0.5 r=0.40 fill="black">
+					</mask>
+					<g id="piechart">
+						<circle cx=0.5 cy=0.5 r=0.5>
+							<path d="M 0.5 0.5 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)">
+							</g>
+						</defs>
+					</svg>
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 250" style="position: fixed; left: -1000px; height: -1000px;">
 						<defs>
-							<mask id="piemask" maskContentUnits="objectBoundingBox">
-								<circle cx=0.5 cy=0.5 r=0.49 fill="white">
-									<circle cx=0.5 cy=0.5 r=0.40 fill="black">
-									</mask>
-									<g id="piechart">
-										<circle cx=0.5 cy=0.5 r=0.5>
-											<path d="M 0.5 0.5 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)">
-											</g>
-										</defs>
-									</svg>
-									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 250" style="position: fixed; left: -1000px; height: -1000px;">
-										<defs>
-											<g id="chart">
-												<g id="Gridlines">
-													<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="27.3" x2="468.3" y2="27.3">
-														<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="66.7" x2="468.3" y2="66.7">
-															<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="105.3" x2="468.3" y2="105.3">
-																<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="144.7" x2="468.3" y2="144.7">
-																	<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="184.3" x2="468.3" y2="184.3">
-																	</g>
-																	<g id="Numbers">
-																		<text transform="matrix(1 0 0 1 485 29.3333)" fill="#888888" font-family="'Roboto'" font-size="9">500</text>
-																		<text transform="matrix(1 0 0 1 485 69)" fill="#888888" font-family="'Roboto'" font-size="9">400</text>
-																		<text transform="matrix(1 0 0 1 485 109.3333)" fill="#888888" font-family="'Roboto'" font-size="9">300</text>
-																		<text transform="matrix(1 0 0 1 485 149)" fill="#888888" font-family="'Roboto'" font-size="9">200</text>
-																		<text transform="matrix(1 0 0 1 485 188.3333)" fill="#888888" font-family="'Roboto'" font-size="9">100</text>
-																		<text transform="matrix(1 0 0 1 0 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">1</text>
-																		<text transform="matrix(1 0 0 1 78 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">2</text>
-																		<text transform="matrix(1 0 0 1 154.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">3</text>
-																		<text transform="matrix(1 0 0 1 232.1667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">4</text>
-																		<text transform="matrix(1 0 0 1 309 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">5</text>
-																		<text transform="matrix(1 0 0 1 386.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">6</text>
-																		<text transform="matrix(1 0 0 1 464.3333 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">7</text>
-																	</g>
-																	<g id="Layer_5">
-																		<polygon opacity="0.36" stroke-miterlimit="10" points="0,223.3 48,138.5 154.7,169 211,88.5
-																		294.5,80.5 380,165.2 437,75.5 469.5,223.3 	">
-																	</g>
-																	<g id="Layer_4">
-																		<polygon stroke-miterlimit="10" points="469.3,222.7 1,222.7 48.7,166.7 155.7,188.3 212,132.7
-																		296.7,128 380.7,184.3 436.7,125 	">
-																	</g>
-																</g>
-															</defs>
-														</svg>
-														<script src="../../material.min.js"></script>
-														<!-- The Modal -->
-														<iframe name="formSending"></iframe>
-														<div id="myModal" class="modal">
+							<g id="chart">
+								<g id="Gridlines">
+									<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="27.3" x2="468.3" y2="27.3">
+										<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="66.7" x2="468.3" y2="66.7">
+											<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="105.3" x2="468.3" y2="105.3">
+												<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="144.7" x2="468.3" y2="144.7">
+													<line fill="#888888" stroke="#888888" stroke-miterlimit="10" x1="0" y1="184.3" x2="468.3" y2="184.3">
+													</g>
+													<g id="Numbers">
+														<text transform="matrix(1 0 0 1 485 29.3333)" fill="#888888" font-family="'Roboto'" font-size="9">500</text>
+														<text transform="matrix(1 0 0 1 485 69)" fill="#888888" font-family="'Roboto'" font-size="9">400</text>
+														<text transform="matrix(1 0 0 1 485 109.3333)" fill="#888888" font-family="'Roboto'" font-size="9">300</text>
+														<text transform="matrix(1 0 0 1 485 149)" fill="#888888" font-family="'Roboto'" font-size="9">200</text>
+														<text transform="matrix(1 0 0 1 485 188.3333)" fill="#888888" font-family="'Roboto'" font-size="9">100</text>
+														<text transform="matrix(1 0 0 1 0 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">1</text>
+														<text transform="matrix(1 0 0 1 78 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">2</text>
+														<text transform="matrix(1 0 0 1 154.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">3</text>
+														<text transform="matrix(1 0 0 1 232.1667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">4</text>
+														<text transform="matrix(1 0 0 1 309 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">5</text>
+														<text transform="matrix(1 0 0 1 386.6667 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">6</text>
+														<text transform="matrix(1 0 0 1 464.3333 249.0003)" fill="#888888" font-family="'Roboto'" font-size="9">7</text>
+													</g>
+													<g id="Layer_5">
+														<polygon opacity="0.36" stroke-miterlimit="10" points="0,223.3 48,138.5 154.7,169 211,88.5
+														294.5,80.5 380,165.2 437,75.5 469.5,223.3 	">
+													</g>
+													<g id="Layer_4">
+														<polygon stroke-miterlimit="10" points="469.3,222.7 1,222.7 48.7,166.7 155.7,188.3 212,132.7
+														296.7,128 380.7,184.3 436.7,125 	">
+													</g>
+												</g>
+											</defs>
+										</svg>
+										<script src="../../material.min.js"></script>
+										<!-- The Modal -->
+										<iframe name="formSending"></iframe>
+										<div id="myModal" class="modal">
 
-															<!-- Modal content -->
-															<div class="modal-content">
-																<span class="close" id="m_close">×</span>
+											<!-- Modal content -->
+											<div class="modal-content">
+												<span class="close" id="m_close">×</span>
 
 
-																<center>
+												<center>
 
-																	<form method="post" action="http://10.130.10.35:8080/DBProject/UploadPhoto" enctype="multipart/form-data" id="form1" target="formSending">
-													            <table border="0">
-													                <tr>
-													                    <td>Photo: </td>
-													                    <td><input type="file" name="photo1" size="50"/></td>
-													                </tr>
-													                <tr>
-													                    <td colspan="2">
-													                        <input type="submit" value="Save" id="savesubmit">
-													                    </td>	
-													                </tr>
-													            </table>
-													            <input type="text" name="id" size="50" style="visibility: hidden;" id="id" onclick="comeback()" />
-													        </form>
-																</center>
+													<form method="post" action="http://10.130.10.35:8080/DBProject/UploadPhoto" enctype="multipart/form-data" id="form1" target="formSending">
+														<table border="0">
+															<tr>
+																<td>Photo: </td>
+																<td><input type="file" name="photo1" size="50"/></td>
+															</tr>
+															<tr>
+																<td colspan="2">
+																	<input type="submit" value="Save" id="savesubmit">
+																</td>	
+															</tr>
+														</table>
+														<input type="text" name="id" size="50" style="visibility: hidden;" id="id" onclick="comeback()" />
+													</form>
+												</center>
 
 
-															</div>
+											</div>
 
-														</div>
+										</div>
 
-														<!-- MODAL -->
-														<script>
+										<!-- MODAL -->
+										<script>
 			// Get the modal
 			var modal = document.getElementById('myModal');
 
@@ -681,9 +701,9 @@
 
 	// When the user clicks save close the modal
 	btn1.onclick = function() {
-    modal.style.display = "none";
-    setTimeout(function(){
-    location.reload();
+		modal.style.display = "none";
+		setTimeout(function(){
+			location.reload();
 		},1000);
 	}
 
